# demos

./: CMakeLists.txt  README.md  main.cpp
inc/: geometry.h  thermal.h
include/: element.h  equation.h  individual.h  iwo.h  optimizer.h  population.h  solver.h
src/: element.cpp  individual.cpp  optimizer.cpp  population.cpp  solver.cpp
src/thermal2d/: geometry.cpp  thermal.cpp
test/: test_normal.cpp
